# ProjetIA-DevPro

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/comfyui/: Dockerfile  entrypoint.sh
docker/gradio/: Dockerfile
docker/worker/: Dockerfile
scripts/: init-db.sql  test_comfyui.py  test_db.py  test_mock.py  test_prompt_builder.py  test_worker.py
src/common/: config.py  logging.py  model.py  models.py
src/db/: __init__.py  pool.py  repository.py
src/gradio_app/: handlers.py  main.py  ui.py
src/inference/: __init__.py  base.py  comfyui.py  factory.py  mock.py  workflow_patcher.py
src/inference/mock/: comfyui.py
src/prompt_builder/: __init__.py  builder.py  mappings.py
src/worker/: __init__.py  jobs.py  main.py  queue.py  translator.py  worker_settings.py
workflows/: sd15_txt2img.json  sdxl_turbo_txt2img.json
